--- a/Poo/UtmBuilder/UtmBuilder.Core.Tests/UtmBuilder.Core.Tests.csproj
+++ b/Poo/UtmBuilder/UtmBuilder.Core.Tests/UtmBuilder.Core.Tests.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UtmBuiolder.Core\UtmBuiolder.Core.csproj" />
+  </ItemGroup>
+
 </Project>
